# instrum1

VeB_InstrumentCluster/: CMakeLists.txt  main.cpp  main.qml  qmlmodules
VeB_InstrumentCluster/libs/: CMakeLists.txt
VeB_InstrumentCluster/libs/CarModel/: CMakeLists.txt  CentralCarModel.qml  SplashScreen.qml
VeB_InstrumentCluster/libs/CarModel/include/: carmodelcontroller.h  configreader.h
VeB_InstrumentCluster/libs/CarModel/src/: carmodelcontroller.cpp  configreader.cpp
VeB_InstrumentCluster/libs/ICMain/: BatteryMeter.qml  BoundaryBox.qml  CMakeLists.txt  DateTime.qml  ICHomescreen.qml  MenuSection.qml  Odometer.qml  RangeMeter.qml  RegenMeter.qml  SpeedoMeter.qml  Styles.qml  WeatherApi.cpp  WeatherInfo.cpp  WeatherPage.qml  maincontroller.cpp  maincontroller.h
VeB_InstrumentCluster/libs/ICMain/include/: WeatherApi.h  WeatherInfo.h  keyhandler.h  maincontroller.h  menuselection.h  vehiclemetrics.h
VeB_InstrumentCluster/libs/ICMain/src/: WeatherApi.cpp  WeatherInfo.cpp  keyhandler.cpp  maincontroller.cpp  menuselection.cpp  vehiclemetrics.cpp
VeB_InstrumentCluster/libs/ICSimulation/: CMakeLists.txt
VeB_InstrumentCluster/libs/ICSimulation/include/: simulationcontroller.h  speedsimulator.h
VeB_InstrumentCluster/libs/ICSimulation/src/: simulationcontroller.cpp  speedsimulator.cpp
VeB_InstrumentCluster/libs/Navigation/: CMakeLists.txt  NavigationMap.qml
VeB_InstrumentCluster/libs/Navigation/include/: navigationcontroller.h
VeB_InstrumentCluster/libs/Navigation/src/: navigationcontroller.cpp
VeB_InstrumentCluster/libs/TripInfo/: Assest.qrc  CMakeLists.txt  RowItem.qml  TripDetails.qml  TripInfo.qml
VeB_InstrumentCluster/libs/TripInfo/include/: tripdata.h  tripinfocontroller.h
VeB_InstrumentCluster/libs/TripInfo/src/: tripdata.cpp  tripinfocontroller.cpp
VeB_InstrumentCluster/libs/WarningIndicators/: CMakeLists.txt  GearStateIndicator.qml  IndicatorComponent.qml  WarningIndicators.qml
VeB_InstrumentCluster/libs/WarningIndicators/include/: warningindicatorcontroller.h
VeB_InstrumentCluster/libs/WarningIndicators/src/: warningindicatorcontroller.cpp
